# KameRider_GPSR

./: .gitignore  README.md
src/: kill_manipulation.sh  start_manipulation.sh
src/Prerequirements/turtlebot_description/: astra.urdf.xacro  hokuyo.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  turtlebot_arm.urdf.xacro
src/kamerider_control/kamerider_control_core/: CMakeLists.txt  package.xml
src/kamerider_control/kamerider_control_core/CommonFiles/: Locations.xml  Objects.xml
src/kamerider_control/kamerider_control_core/GPSR/: 6534.lm  6534.log_pronounce  6534.sent  6534.vocab
src/kamerider_control/kamerider_control_core/launch/: gpsr.launch  speech_all_gpsr.launch  speech_all_hmc.launch  tog_battle_control.launch
src/kamerider_control/kamerider_control_core/src/: answer_question.py  gpsr_control.py  play_signal_sound.py  read_xml_files.py  speech_rec_correction.py
src/kamerider_control/kamerider_control_msgs/: CMakeLists.txt  package.xml
src/kamerider_control/kamerider_control_msgs/msg/: MoveRobot.msg  Result.msg
src/kamerider_image/kamerider_image_core/: CMakeLists.txt  package.xml
src/kamerider_image/kamerider_image_core/src/: door_detect.cpp  gender_recognition.py  object_detection.cpp  (+2 more)
src/kamerider_image/kamerider_image_msgs/: CMakeLists (copy).txt  CMakeLists.txt
src/kamerider_navigation/kamerider_navigation_core/: CMakeLists.txt  gpsr_waypoints.txt  package.xml
src/kamerider_navigation/kamerider_navigation_msgs/: CMakeLists.txt  package.xml
src/kamerider_speech/kamerider_speech_core/: CMakeLists.txt  README.md  package.xml
(+27 files in other folders)
